add localization to profile feature

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -38,5 +38,8 @@
   "cartOrderSummery": "ملخص الطلب",
   "cartContinueButton": "المتابعة إلى الدفع",
   "totalPrice": "الإجمالي",
-  "cartProducts": "المنتجات"
+  "cartProducts": "المنتجات",
+  "settings": "الإعدادات",
+  "language": "اللغة",
+  "darkMode": "الوضع الليلي"
 }
