--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -39,5 +39,8 @@
   "cartOrderSummery": "Order Summery",
   "cartContinueButton": "Continue for payments",
   "totalPrice": "Total",
-  "cartProducts": "Products"
+  "cartProducts": "Products",
+  "settings": "Settings",
+  "language": "Language",
+  "darkMode": "Dark Mode"
 }
