add localization to cart button sheet feature

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -41,5 +41,7 @@
   "cartProducts": "المنتجات",
   "settings": "الإعدادات",
   "language": "اللغة",
-  "darkMode": "الوضع الليلي"
+  "darkMode": "الوضع الليلي",
+  "creditCard": "المتابعة باستخدام بطاقة الائتمان",
+  "paypal": "المتابعة باستخدام باي بال"
 }
