finish impl stripe ui and logic

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -43,5 +43,8 @@
   "language": "اللغة",
   "darkMode": "الوضع الليلي",
   "creditCard": "المتابعة باستخدام بطاقة الائتمان",
-  "paypal": "المتابعة باستخدام باي بال"
+  "paypal": "المتابعة باستخدام باي بال",
+  "transactionSuccessful": "تمت العملية بنجاح",
+  "thankYou": "شكرًا لك!",
+  "backToHome": "العودة إلى الشاشة الرئيسية"
 }
