finish forget pass screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -48,5 +48,7 @@
   "thankYou": "شكرًا لك!",
   "backToHome": "العودة إلى الشاشة الرئيسية",
   "signOut": "تسجيل خروج",
-  "addToCart": "اضف الي العربه"
+  "addToCart": "اضف الي العربه",
+  "PasswordRestEmail": "تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني"
+
 }
